--- a/css/fonts.css
+++ b/css/fonts.css
@@ -3,7 +3,7 @@
     font-family: Abel;
     src: url('../fonts/Abel/Abel-Regular.ttf');
 }
-/* ---------font family Anton----------- */
+/* ---------font family Anton--maged--------- */
 @font-face{
     font-family: Anton;
     src: url('../fonts/Anton/Anton-Regular.ttf');
