Revert "Update fonts.css"
This reverts commit 0613819cf6c2d27c84f62214b16eeabbed195faa.

--- a/css/fonts.css
+++ b/css/fonts.css
@@ -3,7 +3,7 @@
     font-family: Abel;
     src: url('../fonts/Abel/Abel-Regular.ttf');
 }
-/* ---------font family Anton--maged--------- */
+/* ---------font family Anton----------- */
 @font-face{
     font-family: Anton;
     src: url('../fonts/Anton/Anton-Regular.ttf');
